--- a/index.html
+++ b/index.html
@@ -10,7 +10,31 @@
 
 	<div class="main">
 		<div class="container">
-           
+           <h2>1.) This is the dummy question</h2>
+
+		   <div class="row">
+			<!-- inp $ lab ---id&for same name /---name same all option-->
+           <input type="radio" value="a"  id="opt1" class="opts" name="option">
+		   <label for="opt1">a) Option1</label>
+		   </div>
+
+		   <div class="row">
+			<input type="radio" value="b" id="opt2" class="opts" name="option">
+			<label for="opt2">b) Option2</label>
+		   </div>
+
+		   <div class="row">
+            <input type="radio" value="c" id="opt3" 
+class="opts"name="option">
+		   <label for="opt3">c) Option3</label>
+		   </div>
+
+		   <div class="row">
+			<input type="radio" value="d" id="opt4" class="opts" name="option">
+			<label for="opt4">d) Option4</label>
+		   </div>
+
+		   <button class="btn">Submit</button>
 
 		</div>
 	</div>
