--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 	<div class="main">
 		<div class="container">
-           <h2>1.) This is the dummy question</h2>
+           <h2 id="quesBox">1.) This is the dummy question</h2>
 
 		   <div class="row">
 			<!-- inp $ lab ---id&for same name /---name same all option-->
@@ -25,7 +25,7 @@
 
 		   <div class="row">
             <input type="radio" value="c" id="opt3" 
-class="opts"name="option">
+class="opts" name="option">
 		   <label for="opt3">c) Option3</label>
 		   </div>
 
