--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
 	<div class="main">
-		<div class="container">
+		<div id="container">
            <h2 id="quesBox">1.) This is the dummy question</h2>
 
 		   <div class="row">
@@ -34,7 +34,7 @@ class="opts" name="option">
 			<label for="opt4">d) Option4</label>
 		   </div>
 
-		   <button class="btn">Submit</button>
+		   <button class="btn" onclick="submitQuiz()">Submit</button>
 
 		</div>
 	</div>
